# iote_ai_stm32l5

./: .gitignore  CMakeLists.txt  README.md  prj.conf
boards/arm/iote_ai_l552ze/: Kconfig.board  Kconfig.defconfig  board.cmake  iote_ai_l552ze-common.dtsi  iote_ai_l552ze.dts  iote_ai_l552ze.yaml  iote_ai_l552ze_defconfig  iote_ai_l552ze_ns.dts  iote_ai_l552ze_ns.yaml
boards/arm/iote_ai_l552ze/doc/: iote_ai_l552ze.rst
src/: main.c  main_mpu6050.c
src/stm32_hal/: clock_config.c
